changed Carrige return to unix

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="staticContent/style.css">
     <title>Advanced Tick-Tac-Toe</title>
+%Style%
 </head>
 <body>
     <div class="center">
@@ -51,7 +51,7 @@
             </div>
         </div>
     </div>
-    %SetUrl%
+%SetUrl%
     <script>
 
         // const start = () => {
